# Lidar-Camera-Calibration

./: .gitignore  CMakeLists.txt  README.md  corner_lidar.txt  corner_photo.txt
ROS/: show_coordinate.cpp  snapShot.cpp
docs/: Lidar-camera-calibration.ipynb  introduction.ipynb  target-based.ipynb  targetless-nn.ipynb  targetless-spinning.ipynb  targetless.ipynb
include/: cal_calibration.h  lidar_visualize.hpp
lvx_parser/: _frame.py  pylvx.py
src/: cal_extrinsic.cpp  ceres_PnP.cpp  main.cpp
